fix(style): update base color to white for improved contrast

--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,7 @@
 }
 
 :root {
-    --base-color: #ff0000;
+    --base-color: #fff;
     --base-variant: #fff;
     --base-background: #f7f7f7;
     --text-color: #2A2A2A;
